--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,16 @@ body {
     height: 100vh;
     width: 100vw;
 }
+
+#timeLord {
+    width: 108px;
+    text-align: center;
+}
+
+#timer{
+    color: #fff;
+    background-color: blue;
+    padding: 15px 17px;
+    font-size: 150%;
+    font-weight: bolder;
+}
