--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
+    background-image: url('../images/Background.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 
 h1 {
@@ -25,6 +29,11 @@ h1 {
     font-size: 150%;
     font-weight: bolder;
 }
+
+/* #quizForm {
+    background-color: rgba(255, 255, 255, 0.6);
+
+} */
 
 
 
